[project]
name = "voice-agent"
version = "0.1.0"
description = "FastAPI backend for voice agent"
dependencies = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "python-jose[cryptography]",
    "pwdlib[argon2]",
    "pydantic-settings",
    "python-dotenv",
    "sqlalchemy",
    "sqlmodel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"